[package]
name = "logshipper"
version = "0.1.0"
authors = ["Fayiz Musthafa "]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
hash_ring = "0.1.7"
rusoto_core = "0.41.0"
rusoto_s3 = "0.41.0"
rusoto_credential = "0.41.0"
rand = "*"
tokio = "1.18"